drupal/sites/all/themes/antistatique/assets/sass/components/socialize.scss
/*doc
---
title: Socialize
name: b-socialize
category: Antistatique - Components
---

```html_example
<div class="socialize">
  <div class="container">
    <div class="row">
      <div class="col-md-offset-6 col-md-5">
        <h2 class="sr-only">We socialize</h2>
        <p><b>Like... A lot!</b> Please join us on these services and share moments with us.</p>
        <p>
          <a href="#" class="btn btn-round"><i class="fa fa-linkedin"></i>Our pro activity feed</a>
          <a href="#" class="btn btn-round"><i class="fa fa-twitter"></i>Day to day pace</a>
          <a href="#" class="btn btn-round"><i class="fa fa-facebook"></i>Agency news & events</a>
          <a href="#" class="btn btn-round"><i class="fa fa-instagram"></i>#OfficeLife & team moments</a>
        </p>
      </div>
    </div>
  </div>
</div>
```

*/

.socialize {
  background: url(../svg/we_socialize.svg) no-repeat -24px center;
  position: relative;

  > div {
    position: relative;
    z-index: 10;
  }

  &:after {
    content: '';
    background: url(../svg/we_socialize.svg) no-repeat right center;
    display: block;
    position: absolute;
    width: 100%;
    height: 100%;
    top: 0;
    right: -467px;
  }

  @media only screen and (max-width: $screen-sm-max) {
    background-position: -14px 50px;
    background-size: 245px;
    padding-top: 100px;

    &:after {
      background-position: right 50px;
      background-size: 245px;
      right: -231px;
    }
  }
}

